Added table sorting Added js folder added last done email added active nav function cleaned up some styling updated profile to login

--- a/style.css
+++ b/style.css
@@ -5,3 +5,12 @@
 input {
   margin: 10px;
 }
+
+.page-header a{
+  color: inherit; /* blue colors for links too */
+  text-decoration: inherit; /* no underline */
+}
+
+.tablesorter th {
+  cursor: pointer;
+}
